[package]
name = "lpa-link"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fw-host = { path = "../../lp-fw/fw-host", optional = true }
lpa-client = { path = "../lpa-client", optional = true }
lpc-model = { path = "../../lp-core/lpc-model", optional = true }
serde = { workspace = true, features = ["derive"] }
serialport = { version = "4.8", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []
browser-worker = []
host-process = ["dep:fw-host", "dep:lpa-client", "dep:tokio"]
host-serial-esp32 = [
    "dep:lpa-client",
    "lpa-client/serial",
    "dep:lpc-model",
    "dep:serialport",
    "dep:tokio",
]

[lints]
workspace = true
