[package]
name = "lpa-link"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { version = "0.1", optional = true }
# Native host flashing (M5): espflash as a library, no `cli` feature. The
# `serialport` feature brings the `Flasher`/`Connection` surface; everything
# is gated to `host-serial-esp32`, so wasm builds never see it.
espflash = { version = "3.3", default-features = false, features = [
    "serialport",
], optional = true }
fw-host = { path = "../../lp-fw/fw-host", optional = true }
lpa-client = { path = "../lpa-client", optional = true, default-features = false }
lpc-model = { path = "../../lp-core/lpc-model", optional = true }
lpc-wire = { path = "../../lp-core/lpc-wire", optional = true }
lpfs = { path = "../../lp-base/lpfs", optional = true, features = ["std"] }
js-sys = { version = "0.3", optional = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { workspace = true, optional = true }
serialport = { version = "4.8", optional = true }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["sync"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "ErrorEvent",
    "Location",
    "MessageEvent",
    "OffscreenCanvas",
    "Url",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }

[features]
default = []
browser-serial-esp32 = [
    "device-session",
    "dep:js-sys",
    "dep:lpc-model",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]
browser-worker = [
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
# DeviceSession (state machine, hello-first readiness, injected timers) with
# no concrete wire: platform features add their wire below. Runs on wasm
# (lpa-client stays default-features-off here).
device-session = ["dep:async-trait", "dep:lpa-client", "dep:lpc-wire"]
# DeviceSession over the host protocol transport (`LinkServerConnection`).
# Implied by every host provider feature; never enabled on wasm (it pulls
# lpa-client's tokio-full host runtime).
device-session-host = ["device-session", "lpa-client/host"]
fake-device = [
    "device-session-host",
    "dep:fw-host",
    "lpa-client/serial",
    "dep:lpc-model",
    "dep:lpfs",
    "dep:tokio",
]
host-process = [
    "device-session-host",
    "dep:fw-host",
    "dep:tokio",
]
host-serial-esp32 = [
    "device-session-host",
    "lpa-client/serial",
    "dep:espflash",
    "dep:lpc-model",
    "dep:serde_json",
    "dep:serialport",
    "dep:tokio",
]

[lints]
workspace = true
