[package]
name = "lpa-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
# Panic recovery via catch_unwind (shader compilation, node render)
panic-recovery = ["lpc-engine/panic-recovery"]
naga = ["lpc-engine/naga"]
std = [
	"lpc-hardware/std",
	"lpc-shared/std",
	"lpc-engine/std",
	"lpc-wire/std",
	"lpfs/std",
	"log/std"
]

[dependencies]
lpc-engine = { path = "../../lp-core/lpc-engine", default-features = false }
lpc-hardware = { path = "../../lp-core/lpc-hardware", default-features = false }
lpc-history = { path = "../../lp-core/lpc-history", default-features = false }
lpc-model = { path = "../../lp-core/lpc-model", default-features = false }
lpc-registry = { path = "../../lp-core/lpc-registry", default-features = false }
lpc-wire = { path = "../../lp-core/lpc-wire", default-features = false }
lpc-shared = { path = "../../lp-core/lpc-shared", default-features = false }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
lp-perf = { path = "../../lp-base/lp-perf", default-features = false }
lp-recovery = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
# Concrete CPU graphics backend for tests and doc examples (the server takes
# an injected `Arc<dyn LpGraphics>`; hosts construct the backend).
lp-gfx-lpvm = { path = "../../lp-gfx/lp-gfx-lpvm", default-features = false }
lpc-hardware = { path = "../../lp-core/lpc-hardware", default-features = false, features = ["std"] }
lpc-engine = { path = "../../lp-core/lpc-engine", default-features = false, features = ["std"] }
lpc-registry = { path = "../../lp-core/lpc-registry", default-features = false, features = ["std"] }
lpc-view = { path = "../../lp-core/lpc-view", default-features = false, features = ["std"] }
lpc-shared = { path = "../../lp-core/lpc-shared", default-features = false, features = ["std"] }
lpfs = { path = "../../lp-base/lpfs", default-features = false, features = ["std"] }

[lints]
workspace = true
