[package]
name = "lpa-studio-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "UI-independent LightPlayer Studio state, actions, effects, and sessions"

[dependencies]
lpa-link = { path = "../lpa-link" }
lpc-wire = { path = "../../lp-core/lpc-wire" }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
