[package]
name = "lpa-studio-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Headless LightPlayer Studio application core"

[dependencies]
lpa-client = { path = "../lpa-client", default-features = false }
lpa-link = { path = "../lpa-link" }
lpc-history = { path = "../../lp-core/lpc-history", default-features = false }
lpc-model = { path = "../../lp-core/lpc-model" }
lpc-view = { path = "../../lp-core/lpc-view" }
lpc-wire = { path = "../../lp-core/lpc-wire" }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
async-trait = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window"] }

[dev-dependencies]
# Host-only: the studio edit end-to-end tests run against an in-process
# LightPlayer server (simulator session, no UI). Never built for wasm.
lp-gfx-lpvm = { path = "../../lp-gfx/lp-gfx-lpvm" }
lpa-server = { path = "../lpa-server" }
lpc-shared = { path = "../../lp-core/lpc-shared", features = ["std"] }
lpfs = { path = "../../lp-base/lpfs", features = ["std"] }  # std for host tests

[features]
default = []
browser-worker = [
    "lpa-link/browser-worker",
    "dep:async-trait",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
browser-serial-esp32 = [
    "lpa-link/browser-serial-esp32",
    "dep:async-trait",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[lints]
workspace = true
