[package]
name = "lpa-studio-ux"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "UI-independent LightPlayer Studio UX surface"

[dependencies]
lpa-client = { path = "../lpa-client", default-features = false }
lpa-link = { path = "../lpa-link" }
lpc-model = { path = "../../lp-core/lpc-model" }
lpc-wire = { path = "../../lp-core/lpc-wire" }
async-trait = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window"] }

[features]
default = []
browser-worker = [
    "lpa-link/browser-worker",
    "dep:async-trait",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
browser-serial-esp32 = [
    "lpa-link/browser-serial-esp32",
    "dep:async-trait",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[lints]
workspace = true
