[package]
name = "lpa-studio-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Static Dioxus web shell for LightPlayer Studio"

[features]
stories = ["dep:lpa-studio-web-story-macros"]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-icons = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
lpa-studio-core = { path = "../lpa-studio-core", features = ["browser-worker", "browser-serial-esp32"] }
lpa-studio-web-story-macros = { path = "../lpa-studio-web-story-macros", optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "History", "HtmlElement", "Location", "Window"] }

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }

[lints]
workspace = true
