[package]
name = "lpa-studio-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Static Dioxus web shell for LightPlayer Studio"

[features]
stories = ["dep:lpa-studio-web-story-macros"]

[dependencies]
async-trait = "0.1"
dioxus = { version = "0.7", features = ["web"] }
dioxus-icons = "0.1"
futures-util = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
log = { workspace = true }
lpa-client = { path = "../lpa-client", default-features = false }
lpa-link = { path = "../lpa-link", features = ["browser-worker"] }
lpa-studio-core = { path = "../lpa-studio-core", features = ["browser-worker", "browser-serial-esp32"] }
lpa-studio-web-story-macros = { path = "../lpa-studio-web-story-macros", optional = true }
lpc-wire = { path = "../../lp-core/lpc-wire" }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "BroadcastChannel",
    "CanvasRenderingContext2d",
    "Crypto",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "ImageData",
    "Location",
    "MediaQueryList",
    "MessageEvent",
    "Navigator",
    "OffscreenCanvas",
    "Performance",
    "PointerEvent",
    "StorageManager",
    "Url",
    "VisibilityState",
    "Window",
    "Worker",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lpa-fs-opfs = { path = "../lpa-fs-opfs" }
lpfs = { path = "../../lp-base/lpfs" }
wasm-bindgen-futures = "0.4"

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }

[lints]
workspace = true
