[package]
name = "web-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "GLSL → WASM browser demo (compiler runs in-browser)"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lps-wasm = { path = "../../lp-shader/legacy/lps-wasm" }
wasm-bindgen = "0.2"
