[package]
name = "web-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "GLSL → WASM browser demo using lpvm-wasm"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lpvm-wasm = { path = "../../lp-shader/lpvm-wasm" }
lps-frontend = { path = "../../lp-shader/lps-frontend" }
lpvm = { path = "../../lp-shader/lpvm" }
wasm-bindgen = "0.2"
js-sys = "0.3"
