[package]
name = "lpfs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
std = []

[dependencies]
hashbrown = { workspace = true }
log = { workspace = true, default-features = false }
lpc-model = { path = "../../lp-core/lpc-model", default-features = false }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
