[package]
name = "lp-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
lp-model = { path = "../lp-model" }
lp-shared = { path = "../lp-shared" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
