[package]
name = "lp-engine-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
lpc-model = { path = "../lpc-model", default-features = false }
lpl-model = { path = "../../lp-legacy/lpl-model", default-features = false }
hashbrown = { workspace = true }

[lints]
workspace = true
