[package]
name = "lp-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["std", "cranelift-optimizer", "cranelift-verifier"]
# Panic recovery via catch_unwind (embedded targets)
panic-recovery = ["dep:unwinding"]
# Enable Cranelift optimizer (egraph-based optimizations) - saves ~147-200 KB when disabled
cranelift-optimizer = ["lpir-cranelift/cranelift-optimizer"]
# Enable Cranelift verifier (function verification) - saves ~19 KB when disabled
cranelift-verifier = ["lpir-cranelift/cranelift-verifier"]
std = [
    "lp-shared/std",
    "lpir-cranelift/std",
]

[dependencies]
unwinding = { version = "0.2", optional = true, default-features = false, features = ["panic"] }
serde = { workspace = true, features = ["derive"] }
hashbrown = { workspace = true }
lpir-cranelift = { path = "../../lp-glsl/lpir-cranelift", default-features = false, features = ["glsl"] }
lpvm = { path = "../../lp-glsl/lpvm", default-features = false }
lp-glsl-builtins = { path = "../../lp-glsl/lp-glsl-builtins", default-features = false }
log = { workspace = true, default-features = false }

lp-model = { path = "../lp-model", default-features = false }
lp-shared = { path = "../lp-shared", default-features = false }
libm = "0.2"

[dev-dependencies]
lp-shared = { path = "../lp-shared", default-features = false, features = ["std"] }
lp-engine-client = { path = "../lp-engine-client", default-features = false, features = ["std"] }
env_logger = { workspace = true }