[package]
name = "lp-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["std", "cranelift", "cranelift-optimizer", "cranelift-verifier"]
# Panic recovery via catch_unwind (embedded targets)
panic-recovery = ["dep:unwinding"]
# Cranelift JIT backend (`LpGraphics` / shader compilation)
cranelift = ["dep:lpvm-cranelift", "dep:lpir"]
# RV32 native JIT (`LpGraphics` via `lpvm-native` `rt_jit`; only on `target_arch = "riscv32"`)
native-jit = ["dep:lpvm-native", "dep:lpir"]
# Enable Cranelift optimizer (egraph-based optimizations) - saves ~147-200 KB when disabled
cranelift-optimizer = ["cranelift", "lpvm-cranelift?/cranelift-optimizer"]
# Enable Cranelift verifier (function verification) - saves ~19 KB when disabled
cranelift-verifier = ["cranelift", "lpvm-cranelift?/cranelift-verifier"]
std = [
    "lp-shared/std",
    "lpvm-cranelift?/std",
]

[dependencies]
unwinding = { version = "0.2", optional = true, default-features = false, features = ["panic"] }
serde = { workspace = true, features = ["derive"] }
hashbrown = { workspace = true }
lpvm-cranelift = { path = "../../lp-shader/lpvm-cranelift", default-features = false, optional = true, features = ["glsl"] }
# Note: lpvm-native's 'debug' feature (interleaved/disasm sections) is disabled
# for firmware builds to reduce code size and improve compilation performance.
lpvm-native = { path = "../../lp-shader/lpvm-native", default-features = false, optional = true }
lpir = { path = "../../lp-shader/lpir", default-features = false, optional = true }
lpvm = { path = "../../lp-shader/lpvm", default-features = false }
lps-builtins = { path = "../../lp-shader/lps-builtins", default-features = false }
lps-frontend = { path = "../../lp-shader/lps-frontend", default-features = false }
lps-q32 = { path = "../../lp-shader/lps-q32", default-features = false }
log = { workspace = true, default-features = false }

lp-model = { path = "../lp-model", default-features = false }
lp-shared = { path = "../lp-shared", default-features = false }
libm = "0.2"

[dev-dependencies]
lp-shared = { path = "../lp-shared", default-features = false, features = ["std"] }
lp-engine-client = { path = "../lp-engine-client", default-features = false, features = ["std"] }
env_logger = { workspace = true }