[package]
name = "lp-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
# Panic recovery via catch_unwind (embedded targets)
panic-recovery = ["dep:unwinding"]
std = [
    "lp-shared/std",
]

[dependencies]
unwinding = { version = "0.2", optional = true, default-features = false, features = ["panic"] }
serde = { workspace = true, features = ["derive"] }
hashbrown = { workspace = true }
lpir = { path = "../../lp-shader/lpir", default-features = false }
lp-shader = { path = "../../lp-shader/lp-shader", default-features = false }
lpvm = { path = "../../lp-shader/lpvm", default-features = false }
lps-builtins = { path = "../../lp-shader/lps-builtins", default-features = false }
lps-frontend = { path = "../../lp-shader/lps-frontend", default-features = false }
lps-q32 = { path = "../../lp-shader/lps-q32", default-features = false }
log = { workspace = true, default-features = false }

lp-model = { path = "../lp-model", default-features = false }
lp-shared = { path = "../lp-shared", default-features = false }
lps-shared = { path = "../../lp-shader/lps-shared", default-features = false }
libm = "0.2"

# Backend selection: exactly one LPVM engine is wired into `gfx::Graphics`,
# chosen by target architecture rather than a Cargo feature.
#   - riscv32       → lpvm-native (rt_jit)        — bare-metal firmware
#   - everything else → lpvm-wasm (rt_wasmtime/rt_browser) — host or wasm32 guest
[target.'cfg(target_arch = "riscv32")'.dependencies]
# Note: lpvm-native's 'debug' feature (interleaved/disasm sections) is disabled
# for firmware builds to reduce code size and improve compilation performance.
lpvm-native = { path = "../../lp-shader/lpvm-native", default-features = false }

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
lpvm-wasm = { path = "../../lp-shader/lpvm-wasm", default-features = false }

[dev-dependencies]
lp-shared = { path = "../lp-shared", default-features = false, features = ["std"] }
lp-engine-client = { path = "../lp-engine-client", default-features = false, features = ["std"] }
env_logger = { workspace = true }
