[package]
name = "lp-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std", "cranelift-optimizer", "cranelift-verifier"]
# Enable Cranelift optimizer (egraph-based optimizations) - saves ~147-200 KB when disabled
cranelift-optimizer = ["lp-engine/cranelift-optimizer"]
# Enable Cranelift verifier (function verification) - saves ~19 KB when disabled
cranelift-verifier = ["lp-engine/cranelift-verifier"]
std = [
	"lp-shared/std",
	"lp-engine/std",
	"log/std"
]

[dependencies]
lp-engine = { path = "../lp-engine", default-features = false }
lp-model = { path = "../lp-model", default-features = false }
lp-shared = { path = "../lp-shared", default-features = false }
hashbrown = { workspace = true }
log = { workspace = true, default-features = false }

[dev-dependencies]
lp-engine = { path = "../lp-engine", default-features = false, features = ["std"] }
lp-engine-client = { path = "../lp-engine-client", default-features = false, features = ["std"] }
lp-shared = { path = "../lp-shared", default-features = false, features = ["std"] }

[lints]
workspace = true
