[package]
name = "lp-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
# Panic recovery via catch_unwind (shader compilation, node render)
panic-recovery = ["lp-engine/panic-recovery"]
std = [
	"lp-shared/std",
	"lp-engine/std",
	"lpfs/std",
	"log/std"
]

[dependencies]
lp-engine = { path = "../lp-engine", default-features = false }
lpc-model = { path = "../lpc-model", default-features = false }
lpl-model = { path = "../../lp-legacy/lpl-model", default-features = false }
lp-shared = { path = "../lp-shared", default-features = false }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
hashbrown = { workspace = true }
log = { workspace = true, default-features = false }

[dev-dependencies]
lp-engine = { path = "../lp-engine", default-features = false, features = ["std"] }
lp-engine-client = { path = "../lp-engine-client", default-features = false, features = ["std"] }
lp-shared = { path = "../lp-shared", default-features = false, features = ["std"] }
lpfs = { path = "../../lp-base/lpfs", default-features = false, features = ["std"] }

[lints]
workspace = true
