[package]
name = "lp-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
# Panic recovery via catch_unwind (shader compilation, node render)
panic-recovery = ["lpc-runtime/panic-recovery", "lpl-runtime/panic-recovery"]
std = [
	"lp-shared/std",
	"lpc-runtime/std",
	"lpl-runtime/std",
	"lpl-model/std",
	"lpfs/std",
	"log/std"
]

[dependencies]
lpc-engine = { path = "../lpc-engine", default-features = false }
lpl-runtime = { path = "../../lp-legacy/lpl-runtime", default-features = false }
lpc-model = { path = "../lpc-model", default-features = false }
lpl-model = { path = "../../lp-legacy/lpl-model", default-features = false }
lp-shared = { path = "../lp-shared", default-features = false }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
hashbrown = { workspace = true }
log = { workspace = true, default-features = false }

[dev-dependencies]
lpc-engine = { path = "../lpc-engine", default-features = false, features = ["std"] }
lpl-runtime = { path = "../../lp-legacy/lpl-runtime", default-features = false, features = ["std"] }
lp-engine-client = { path = "../lp-engine-client", default-features = false, features = ["std"] }
lp-shared = { path = "../lp-shared", default-features = false, features = ["std"] }
lpfs = { path = "../../lp-base/lpfs", default-features = false, features = ["std"] }

[lints]
workspace = true
