[package]
name = "lp-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
log = { workspace = true, default-features = false }
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lp-model = { path = "../lp-model", default-features = false }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
