[package]
name = "lp-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
hashbrown = { workspace = true }
libm = "0.2"
log = { workspace = true, default-features = false }
lp-model = { path = "../lp-model", default-features = false }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
