[package]
name = "lp-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["lpfs/std"]

[dependencies]
libm = "0.2"
log = { workspace = true, default-features = false }
lpc-model = { path = "../lpc-model", default-features = false }
lpl-model = { path = "../../lp-legacy/lpl-model", default-features = false }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
lps-shared = { path = "../../lp-shader/lps-shared", default-features = false }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
