[package]
name = "lpc-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
# Panic recovery via catch_unwind (embedded targets)
panic-recovery = ["dep:unwinding"]
naga = ["lp-shader/naga"]
std = [
    "lpc-hardware/std",
    "lpc-shared/std",
    "lpfs/std",
    "lp-recovery/std",
]

[dependencies]
lp-collection = { workspace = true, features = ["serde"] }
unwinding = { version = "0.2", optional = true, default-features = false, features = ["panic"] }
serde = { workspace = true, features = ["derive"] }
hashbrown = { workspace = true }
spin = { workspace = true }
lpir = { path = "../../lp-shader/lpir", default-features = false }
lp-gfx = { path = "../../lp-gfx/lp-gfx", default-features = false }
lp-shader = { path = "../../lp-shader/lp-shader", default-features = false }
lps-q32 = { path = "../../lp-shader/lps-q32", default-features = false }
log = { workspace = true, default-features = false }

lpc-model = { path = "../lpc-model", default-features = false }
lpc-hardware = { path = "../lpc-hardware", default-features = false }
lpc-registry = { path = "../lpc-registry", default-features = false }
lpc-wire = { path = "../lpc-wire", default-features = false }
lp-perf = { path = "../../lp-base/lp-perf", default-features = false }
lp-recovery = { workspace = true }
lpfs = { path = "../../lp-base/lpfs", default-features = false }
lpc-shared = { path = "../lpc-shared", default-features = false }
lps-shared = { path = "../../lp-shader/lps-shared", default-features = false }
libm = "0.2"

[dev-dependencies]
# Concrete CPU graphics backend for tests and examples (the engine itself
# depends only on the `lp-gfx` traits; hosts construct the backend).
lp-gfx-lpvm = { path = "../../lp-gfx/lp-gfx-lpvm", default-features = false }
# Per-thread ambient revision so parallel engine tests that tick/stamp
# revisions cannot race each other through the process-wide clock.
lpc-model = { path = "../lpc-model", features = ["test-support"] }
lpc-hardware = { path = "../lpc-hardware", default-features = false, features = ["std"] }
lpc-shared = { path = "../lpc-shared", default-features = false, features = ["std"] }
lpfs = { path = "../../lp-base/lpfs", default-features = false, features = ["std"] }
lpc-view = { path = "../lpc-view", default-features = false, features = ["std"] }
env_logger = { workspace = true }
serde_json = { workspace = true }
