[package]
name = "lpc-hardware"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["toml/std"]

[dependencies]
lp-collection = { workspace = true, features = ["serde"] }
lpc-model = { path = "../lpc-model", default-features = false }
serde = { workspace = true, features = ["derive"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "display"] }

[lints]
workspace = true
