[package]
name = "lpc-hardware"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["serde_json/std"]

[dependencies]
lp-collection = { workspace = true, features = ["serde"] }
lpc-model = { path = "../lpc-model", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
